# stego-project

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
include/embedding_extracting/: lsb_dct.hpp  pvd.hpp
include/encoding/: Hamming.hpp
include/graphics/: gui_interface.hpp  mainwindow.hpp
src/: main.cpp
src/embedding_extracting/: lsb_dct.cpp  pvd.cpp
src/encoding/: Hamming.cpp
src/graphics/: gui_interface.cpp  mainwindow.cpp  mainwindow.ui
tests/: CMakeLists.txt  HammingTest.cpp  lsb_dctTest.cpp  pvdTest.cpp
